--- a/requirements.txt
+++ b/requirements.txt
@@ -1,169 +1,8 @@
-altair==4.2.0
-annotated-types==0.5.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-astor==0.8.1
-astroid==2.4.2
-asttokens==2.0.5
-attrs==21.4.0
-autopep8==1.5.4
-backcall==0.2.0
-bcrypt==3.2.2
-beautifulsoup4==4.11.1
-bleach==5.0.1
-blinker==1.4
-brotlipy==0.7.0
-cachetools==5.2.0
-certifi @ file:///C:/Windows/TEMP/abs_e9b7158a-aa56-4a5b-87b6-c00d295b01fanefpc8_o/croots/recipe/certifi_1655968940823/work/certifi
-cffi==1.15.1
-charset-normalizer==2.1.0
-click==8.1.3
-cloudpickle==2.1.0
-colorama==0.4.5
-colorlover==0.3.0
-commonmark==0.9.1
-conda==4.13.0
-conda-package-handling @ file:///C:/ci/conda-package-handling_1649106011304/work
-cryptography @ file:///C:/ci/cryptography_1652083563162/work
-cufflinks==0.17.3
-cycler==0.11.0
-Cython==0.29.30
-debugpy==1.6.2
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.5
-docopt==0.6.2
-duckdb==0.9.0
-entrypoints==0.4
-executing==0.8.3
-fastjsonschema==2.15.3
-filelock==3.8.0
-fonttools==4.34.4
-future==0.18.2
-gitdb==4.0.9
-GitPython==3.1.27
-greenlet==2.0.2
-gw_dsl_parser==0.1.6a1
-idna @ file:///tmp/build/80754af9/idna_1637925883363/work
-importlib-metadata==4.12.0
-ipykernel==6.15.1
-ipython==8.4.0
-ipython-genutils==0.2.0
-ipywidgets==7.7.1
-isort==5.7.0
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.1.0
-jsonschema==4.7.2
-jupyter-client==7.3.4
-jupyter-core==4.11.1
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.1
-kiwisolver==1.4.4
-lazy-object-proxy==1.4.3
-lightgbm==3.3.2
-llvmlite==0.38.1
-mando==0.6.4
-MarkupSafe==2.1.1
-matplotlib==3.5.2
-matplotlib-inline==0.1.3
-mccabe==0.6.1
-menuinst @ file:///C:/ci/menuinst_1631733438520/work
-mistune==0.8.4
-nbclient==0.6.6
-nbconvert==6.5.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
-notebook==6.4.12
-numba==0.55.2
-numpy==1.23.1
-packaging==21.3
-pandas==1.4.3
-pandocfilters==1.5.0
-paramiko==2.11.0
-parso==0.8.3
-patsy==0.5.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.2.0
-pipenv==2022.8.19
-pipreqs==0.4.11
-platformdirs==2.5.2
-plotly==5.9.0
-plotly-express==0.4.1
-pmdarima==1.8.5
-prometheus-client==0.14.1
-prompt-toolkit==3.0.30
-protobuf==3.20.1
-psutil==5.9.1
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==8.0.0
-pycodestyle==2.6.0
-pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pydantic==2.4.2
-pydantic_core==2.10.1
-pydeck==0.7.1
-Pygments==2.12.0
-pygwalker==0.3.7
-pylint==2.6.0
-Pympler==1.0.1
-PyNaCl==1.5.0
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
-pyparsing==3.0.9
-pyrsistent==0.18.1
-PySocks @ file:///C:/ci/pysocks_1605307512533/work
-python-dateutil==2.8.2
-pytz==2022.1
-pytz-deprecation-shim==0.1.0.post0
-pywin32==300
-pywinpty==2.0.5
-pyzmq==23.2.0
-radon==5.1.0
-requests==2.28.1
-rich==12.5.1
-ruamel-yaml-conda @ file:///C:/ci/ruamel_yaml_1616016898638/work
-scikit-learn==1.1.1
-scipy==1.8.1
-semver==2.13.0
-Send2Trash==1.8.0
-shap==0.41.0
-six==1.16.0
-slicer==0.0.7
-smmap==5.0.0
-soupsieve==2.3.2.post1
-SQLAlchemy==2.0.21
-sqlglot==18.10.1
-stack-data==0.3.0
-statsmodels==0.13.2
-streamlit==1.11.0
-tenacity==8.0.1
-terminado==0.15.0
-threadpoolctl==3.1.0
-tinycss2==1.1.1
-toml==0.10.2
-toolz==0.12.0
-tornado==6.2
-tqdm @ file:///C:/ci/tqdm_1650636210717/work
-traitlets==5.3.0
-types-python-dateutil==2.8.19.14
-typing_extensions==4.8.0
-tzdata==2022.1
-tzlocal==4.2
-urllib3==1.26.10
-validators==0.20.0
-virtualenv==20.16.3
-virtualenv-clone==0.5.7
-wasmtime==12.0.0
-watchdog==2.1.9
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.6.1
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306162074/work
-wincertstore==0.2
-wordcloud==1.8.2.2
-wrapt==1.12.1
-yarg==0.1.9
-zipp==3.8.1
+numpy==1.20.1
+streamlit==0.76.0
+seaborn==0.11.1
+matplotlib==3.4.1
+plotly==4.14.3
+pandas==1.2.3
+joblib==0.16.0
+scikit-learn
